# Tender_Management_System

./: .gitignore  Run_app.py  main.py  pyproject.toml  requirements.txt  setup_db.py
agents/: __init__.py  base_agent.py  ingestion_agent.py  qyery_agent.py  summary_agent.py
agents/states/: __init__.py  ingestion_state.py  query_state.py
config/: model_config.py  settings.py
core/: __init__.py  domain_models.py  exceptions.py  interfaces.py
database/: connection.py  models.py  setup.py
dto/request_dto/: __init__.py  ingest_request.py  query_request.py  summary_request.py
dto/response_dto/: __init__.py  ingest_response.py  query_response.py  summary_response.py
repositories/: base_repository.py  tender_chunk_repository.py  tender_file_repository.py  tender_project_repository.py
routers/: ingestion_router.py  query_router.py  summary_router.py
services/: embedding_service.py  ingestion_service.py  retrieval_service.py  streaming_service.py
utils/: text_processing.py
workflows/: __init__.py  ingestion_workflow.py  workflow_states.py
